--- a/package.json
+++ b/package.json
@@ -8,21 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^17.2.0",
     "axios": "^0.18.0",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
+    "element-ui": "^2.4.11",
+    "three": "^0.99.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.0",
+    "@vue/cli-plugin-eslint": "^3.2.1",
     "@vue/cli-service": "^3.2.0",
     "@vue/eslint-config-prettier": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "lint-staged": "^7.2.2",
     "vue-template-compiler": "^2.5.17"
   },
@@ -35,7 +38,9 @@
       "plugin:vue/essential",
       "@vue/prettier"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
