--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@tweenjs/tween.js": "^17.2.0",
     "axios": "^0.18.0",
     "element-ui": "^2.4.11",
+    "mavon-editor": "^2.6.17",
+    "qs": "^6.6.0",
     "three": "^0.99.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
