--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "three": "^0.99.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "x2js": "^3.2.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
